Fixed score on mobile and some styling issues

--- a/base.css
+++ b/base.css
@@ -119,7 +119,13 @@ div[id^="ci"] {
 	margin: 15px 10px;
 	right: 0;
 	padding: 0 10px;
-	cursor: pointer;
+  cursor: pointer;
+  margin: 70px 0 0;
+  width: 300px;
+  left: 50%;
+  transform: translate(-150px, -50%);
+  font-weight: bold;  
+  padding: 10px;
 }
 
 .player {
@@ -135,6 +141,9 @@ div[id^="ci"] {
 
 .score-on-sm .player {
   border-radius: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .player span {
@@ -149,6 +158,15 @@ div[id^="ci"] {
 
 .score-on-sm .player-2 {
   float: right !important;
+}
+
+.score-on-sm div {
+  font-size: 1.2em;
+}
+
+.score-on-sm div span {
+  font-weight: bold;
+	font-size: 1.5em;	
 }
 
 #p2 {
